OS11SPRYKE-1749-Added fix for downbar and added extra space to headers [5.9] (#2274)
* Added fix for downbar and added extra space to headers

* Added parameter exact date to time slot procedure.

--- a/src/Pyz/Yves/ShopUi/Theme/default/components/organisms/header/header.scss
+++ b/src/Pyz/Yves/ShopUi/Theme/default/components/organisms/header/header.scss
@@ -355,7 +355,8 @@ $header-sticky-height: rem(130, number);
                 display: block;
                 width: rem(300);
                 padding: rem(5) 0 rem(10) rem(10);
-                top: 92%;
+                top: 98%;
+                margin-left: rem(12.8);
             }
 
             @include helper-media-ie() {
